# aratta

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: agents.md  architecture.md  model-aliases.md  providers.md
docs/providers/: anthropic.md  google.md  openai.md  xai.md
src/aratta/: __init__.py  cli.py  config.py  server.py
src/aratta/agents/: __init__.py  agent.py  context.py  executor.py  loop.py  permissions.py  sandbox.py  types.py
src/aratta/core/: __init__.py  types.py
src/aratta/providers/: __init__.py  base.py
src/aratta/providers/anthropic/: __init__.py  adapter.py
src/aratta/providers/google/: __init__.py  adapter.py
src/aratta/providers/local/: __init__.py  adapter.py
src/aratta/providers/openai/: __init__.py  adapter.py
src/aratta/providers/xai/: __init__.py  adapter.py
src/aratta/resilience/: __init__.py  circuit_breaker.py  heal_worker.py  health.py  metrics.py  reload_manager.py
src/aratta/tools/: __init__.py  capabilities.py  registry.py
tests/: conftest.py  test_server.py  test_server_concurrency.py
tests/test_agents/: test_loop.py
tests/test_core/: test_types.py
tests/test_providers/: test_anthropic.py  test_error_paths.py  test_google.py  test_local.py  test_openai.py  test_xai.py
tests/test_resilience/: test_circuit_breaker.py  test_healing_integration.py
tests/test_tools/: test_registry.py
